add network grafana service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       - "3000:3000"
     volumes:
       - ./Grafana/data:/var/lib/grafana:rw
+    
+    networks:
+      main_net:
+        aliases:
+         - grafana
 
 networks:
   main_net:
